# nuvie

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  db.py  deps.py  logger.py  security.py
app/routes/: login.py  patient.py  user.py
init-db/: create-schema.sql
nginx/: nginx.conf
scripts/: patient_entrypoint.sh  user_entrypoint.sh
scripts/client/: patient_insertion.py
